# LibDegorasSLR

./: .gitignore  README.md
LibDPSLR/: .gitignore  CMakeLists.txt
LibDPSLR/CMakeModules/: CMakeMacros.cmake
LibDPSLR/examples/TestAlgorithm_GeneratePasses/: CMakeLists.txt_todo  TestAlgorithm_GeneratePasses.cpp
LibDPSLR/includes/LibDPSLR/: algorithms.h  algorithms.h_todo  cpfutils.h_todo  geo.h  libdpslr_global.h  libdpslr_init.h  libdpslr_initl.h
LibDPSLR/includes/LibDPSLR/AlgorithmsSLR/: Utilities
LibDPSLR/includes/LibDPSLR/Astronomical/: astro_types.h  astro_utils.h  novas_utils.h  predictor_sun.h  sunmoon.h  tle.h
LibDPSLR/includes/LibDPSLR/FormatsILRS/: CPFFormat  CRDFormat
LibDPSLR/includes/LibDPSLR/Geo/: meteo.h  tropo.h
LibDPSLR/includes/LibDPSLR/Helpers/: common_aliases.h  container_helpers.h  container_helpers.tpp  file_helpers.h  singleton.h  string_helpers.h  string_helpers.tpp
LibDPSLR/includes/LibDPSLR/ILRSFormats/: crd.h
LibDPSLR/includes/LibDPSLR/Mathematics/: Matrix  interval.h  math.h  math.tpp  math_types.h  matrix.h  operators.h  units.h
LibDPSLR/includes/LibDPSLR/SpaceObject/: SpaceObject  spaceobject_utils.h
LibDPSLR/includes/LibDPSLR/Statistics/: fitting.h  fitting.tpp  fitting_types.h  histogram.h  measures.h  statistics_types.h
LibDPSLR/includes/LibDPSLR/Testing/: unit_test.h
LibDPSLR/includes/LibDPSLR/Timing/: time_utils.h
LibDPSLR/sources/: algorithms.cpp  class_tle.cpp  geo.cpp
LibDPSLR/sources/AlgorithmsSLR/utils/: cpf_interpolator - copia.cpp_todo  predictor_slr.cpp  tracking_slr.cpp
LibDPSLR/sources/Astronomical/: astro_utils.cpp  tle.cpp
LibDPSLR/sources/FormatsILRS/common/: consolidated_record - copia.cpp_todo  consolidated_record.cpp  consolidated_types.cpp
LibDPSLR/sources/FormatsILRS/cpf/: cpf.cpp
LibDPSLR/sources/FormatsILRS/crd/: crd.cpp
LibDPSLR/sources/Geo/: meteo.cpp  tropo.cpp
LibDPSLR/sources/Helpers/: container_helpers.cpp  file_helpers.cpp  string_helpers.cpp
LibDPSLR/sources/ILRSFormats/common/: consolidated_record.cpp  consolidated_types.cpp
LibDPSLR/sources/ILRSFormats/cpf/: cpf.cpp
LibDPSLR/sources/ILRSFormats/crd/: class_crd.cpp  crd_configuration.cpp  crd_data.cpp  crd_header.cpp
LibDPSLR/sources/Mathematics/: math.cpp
LibDPSLR/sources/SpaceObjects/: spaceobject_utils.cpp
LibDPSLR/sources/Testing/: unit_test.cpp
LibDPSLR/sources/Timing/: time_utils.cpp
LibDPSLR/test/TestAlgorithm_GeneratePasses/: TestAlgorithm_GeneratePasses.cpp
LibDPSLR/test/TestAlgorithm_GeneratePasses/test_data/: 39380_cpf_230309_5681.tjr
LibDPSLR/testing/AlgorithmsSLR/UnitTest_PredictorSLR/: CMakeLists.txt  UnitTest_PredictorSLR.cpp
LibDPSLR/testing/Astronomical/: CMakeLists.txt  UnitTest_AstroUtils.cpp
LibDPSLR/testing/Mathematics/: CMakeLists.txt  UnitTest_Matrix.cpp
LibDPSLR/testing/Mathematics/UnitTest_Matrix/: CMakeLists.txt  UnitTest_Matrix.cpp
LibDPSLR/testing/Testing/: CMakeLists.txt  UnitTest_Testing.cpp
LibDPSLR/testing/Timing/: CMakeLists.txt  UnitTest_Timing.cpp
LibDegorasSLR/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LibDegorasSLRConfig.cmake.in
LibDegorasSLR/CMakeLibsConfig/: ConfigLibDegorasBase.cmake  ConfigLibDegorasSLR.cmake  ConfigLibNovasCpp.cmake
LibDegorasSLR/CMakeModules/: CMakeMacrosInstall.cmake  CMakeMacrosLauncher.cmake  CMakeMacrosLibraries.cmake  CMakeMacrosProjects.cmake  CMakeMacrosUtils.cmake  ConfigLibDegorasSLR.cmake  ConfigLibNovasCpp.cmake
LibDegorasSLR/cmake/toolchains/: dp_windows_mingw.cmake
LibDegorasSLR/examples/: CMakeLists.txt
LibDegorasSLR/examples/Astronomical/PredictorStarNovas/: Astronomical_PredictorStarNovas.cpp  CMakeLists.txt
LibDegorasSLR/examples/TrackingMount/PredictorMountMove/: CMakeLists.txt  TrackingMount_PredictorMountMove.cpp
LibDegorasSLR/examples/TrackingMount/PredictorMountSLR/: CMakeLists.txt  TrackingMount_PredictorMountSLR.cpp
LibDegorasSLR/examples/TrackingSLR/: 1328_cpf_240128_02901.sgf  Example_TrackingSLR.cpp
LibDegorasSLR/examples/UtilitiesSLR_TrackingSLR/: CMakeLists.txt  Plots_UtilitiesSLR_TrackingSLR.py  UtilitiesSLR_TrackingSLR.cpp
LibDegorasSLR/examples/UtilitiesSLR_TrackingSLR/outputs/: Explorer27_SunEnd_track.csv  Jason3_SunMid_track.csv  Lares_SunBeg_track.csv
LibDegorasSLR/examples/UtilitiesSLR_TrackingSLR/python_helpers/: Plots_UtilitiesSLR_TrackingSLR.py
LibDegorasSLR/examples/UtilitiesSLR_TrackingSLR/python_scripts/: Plots_UtilitiesSLR_TrackingSLR.py
LibDegorasSLR/includes/LibDegorasSLR/: Initialization  ModuleAstronomical  ModuleFormatsILRS  ModuleHelpers  ModuleMathematics  ModuleTiming  ModuleUtilitiesSLR  crdutils.h_todo  libdegorasslr_global.h  libdegorasslr_init.h  libdpslr_global.h  libdpslr_init.h
LibDegorasSLR/includes/LibDegorasSLR/AlgorithmsSLR/: Utilities
LibDegorasSLR/sources/: algorithms.cpp_todo  cpfutils.cpp_todo  crdutils.cpp_todo
LibDegorasSLR/sources/AlgorithmsSLR/: todo_algorithm.cpp_todo
LibDegorasSLR/sources/Astronomical/: astro_utils.cpp  novas_utils.cpp  spaceobject_utils.cpp  tle.cpp
LibDegorasSLR/sources/Geo/: meteo.cpp  tropo.cpp
LibDegorasSLR/sources/Helpers/: container_helpers.cpp  file_helpers.cpp  filedir_helpers.cpp  string_helpers.cpp
LibDegorasSLR/sources/Mathematics/: math.cpp
LibDegorasSLR/sources/SpaceObjects/: spaceobject_utils.cpp
LibDegorasSLR/sources/Testing/: unit_test.cpp  unit_test_base.cpp  unit_test_log.cpp  unit_test_summary.cpp
LibDegorasSLR/sources/Timing/: time_utils.cpp
LibDegorasSLR/sources/TrackingMount/: tracking_analyzer.cpp
LibDegorasSLR/sources/UtilitiesSLR/: predictor_mount_slr.cpp  predictor_slr.cpp  tracking_slr.cpp
LibDegorasSLR/testing/: CMakeLists.txt
LibDegorasSLR/testing/Astronomical/: CMakeLists.txt  UT_Astro_NovasUtils.cpp  UnitTest_AstroUtils.cpp
LibDegorasSLR/testing/Helpers/: UT_Helpers_Filedir.cpp  UT_Helpers_Types.cpp  UnitTest_Helpers.cpp
LibDegorasSLR/testing/Mathematics/: UnitTest_Matrix.cpp
LibDegorasSLR/testing/Testing/: UnitTest_Testing.cpp
LibDegorasSLR/testing/Timing/: UT_Timing_TimeUtils.cpp  UnitTest_Timing.cpp
(+332 files in other folders)
